# SeniorDesignWS

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  client.h  server.h  shannon-fano.h
resources/: camera.cpp  client.cpp  server.cpp  shannon-fano.cpp
src/: client.cpp  main.cpp  main_client.cpp  main_server.cpp  md5.cpp  server.cpp  shannon-fano.cpp  test.cpp  testing.cpp
